<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vtol_controller</name>
  <version>0.0.1</version>
  <description>VTOL PID controller for PX4 using ROS 2</description>
  <maintainer email="srinath.bhamidipati@research.iiit.ac.in">rosusr</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Execution dependencies -->
  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
